# REsp32Sol

./: Cargo.toml  README.md  partitions.csv  sdkconfig.defaults
src/: main.rs  solrpc.rs
