[package]
name = "REsp32Sol"
version = "0.1.0"
authors = ["bergabman <bergabman1@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.87"

[[bin]]
name = "REsp32Sol"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
strip = "debuginfo"
# lto = "fat"  # Link-time optimization across crates
codegen-units = 1  # Single unit for better LTO
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
embedded-svc = "0.28"
solana-program = { version = "3.0.0", default-features = false }
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-transaction = {version = "3.0.0" , features = ["bincode"]}
solana-keypair = "3.0.1"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = "1.3"
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

[build-dependencies]
embuild = "0.33"